eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "a8a089436a19c42948bfaf2c342cbb25-442418581.us-east-1.elb.amazonaws.com"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: simple-bank-api-service
              port:
                number: 80
  tls:
  - hosts:
    - a8a089436a19c42948bfaf2c342cbb25-442418581.us-east-1.elb.amazonaws.com
    secretName: simple-bank-api-cert
